--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.3.2",
     "firebase": "^7.3.0",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
+    "vue-ctk-date-time-picker": "^2.4.0",
+    "vue-gapi": "^0.1.0",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.1.3",
+    "vuejs-datetimepicker": "^1.1.13",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
